--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "clone": "^2.1.2",
     "elliptic": "^6.4.1",
     "install": "^0.12.2",
-    "node-webcrypto-ossl": "^1.0.39",
-    "npm": "^6.8.0"
+    "node-webcrypto-ossl": "^1.0.39"
   },
   "devDependencies": {
     "@types/fetch-mock": "^7.2.3",
@@ -47,7 +46,7 @@
     "ts-loader": "^2.0.2",
     "webpack": "^2.3.0",
     "node-fetch": "^2.3.0",
-    "nyc": "^13.3.0",
+    "nyc": "^14.0.0",
     "source-map-support": "^0.5.9",
     "tslint": "^5.11.0",
     "tslint-config-standard": "^8.0.1",
